--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     --button-bg: white;
     --button-border: grey;
     --button-text: black;
+    --card-bg: rgb(253, 219, 178);;
 }
 
 button,
@@ -35,7 +36,7 @@ input[type=button]:hover {
 header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-content: center;
     align-items: center;
     background-color: var(--header-bg);
@@ -47,11 +48,13 @@ header {
 header p {
     font-size: 1.5rem;
     font-weight: bold;
+    margin-right: 10px;
 }
 
 .add-book-button {
     display: block;
     padding: 10px;
+    margin-left: 10px;
 }
 
 .add-book-button:disabled {
@@ -98,7 +101,8 @@ input[type=button] {
     justify-content: flex-start;
     padding: 10px;
     margin: 10px 10px 20px 10px;
-    background-color: rgb(253, 219, 178);
+    background-color: var(--card-bg);
+    
 }
 
 .book-image {
@@ -115,7 +119,7 @@ input[type=button] {
     flex: 3;
     display: flex;
     flex-direction: column;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .text-paragraph {
@@ -134,6 +138,55 @@ input[type=button] {
     padding-left: 5px;
 }
 
+@media only screen and (min-width: 574px) {
+    .book-container {
+
+        columns: 6 190px;
+        column-gap: 1rem;
+        margin-right: 20px;
+    }
+
+    .card-container {
+        width: 150px;
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 5px;
+    }
+
+    .book-image {
+        margin-bottom: 10px;
+    }
+}
+
+@media only screen and (min-width: 800px) {
+    .book-container {
+        columns: 6 200px;
+        column-gap: 1rem;
+        margin-right: 20px;
+    }
+
+    .card-container {
+        width: 150px;
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 5px;
+    }
+
+    .book-image {
+        margin-bottom: 10px;
+    }
+
+    .form-container {
+        display: flex;
+        justify-content: center;
+    }
+
+    form {
+        width: 30%;
+    }
+}
 
 /*
 
